<resources>
    <string name="app_name">板栗</string>
    <string name="login">立即登录</string>
    <string name="register">注册</string>
    <string name="user_name">请输入用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="not_account">还没有账号?</string>
    <string name="emil">电子邮箱</string>
    <string name="phone_number">手机号码</string>
    <string name="cancel">取消</string>
    <string name="by_phone">手机号注册</string>
    <string name="by_emil">切换邮箱注册</string>
    <string name="writ_phone_number">请输入新的手机号码</string>
    <string name="verification">短信验证码</string>
    <string name="set_password">设置您的登陆密码</string>
    <string name="register_right_now">立即注册</string>
    <string name="login_password">登陆密码</string>
    <string name="six_number">六位短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="emil_stress">电子邮箱地址</string>
    <string name="enter_email_address">请输入您的电子邮箱地址</string>
    <string name="confirm_email_address">确认电子邮箱地址</string>
    <string name="confirm_your_email_address">确认您的电子邮箱地址</string>
    <string name="all_files">全部</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="picture">图片</string>
    <string name="register_phone_title">手机号注册</string>
    <string name="register_emil_title">邮箱号注册</string>
    <string name="change_to_phone_register">切换手机号注册</string>
    <string name="change_emil_register">切换邮箱号注册</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="register_loading">注册中…</string>
    <string name="getCode_loading">正在获取验证码…</string>
    <string name="login_loading">登录中…</string>
    <string name="save_loading">保存中…</string>
    <string name="post_loading">上传中…</string>
    <string name="delete_loading">正在删除…</string>
    <string name="rename_loading">更改中…</string>





</resources>