<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.LoginActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds40"
        android:layout_marginTop="32dp"
        android:background="@drawable/gray_radiu_20_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:layout_width="@dimen/ds15"
            android:layout_height="@dimen/ds15"
            android:layout_marginStart="@dimen/sp16"
            android:src="@mipmap/login_login_icon" />

        <EditText
            android:id="@+id/login_phone_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ds12"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/user_name"
            android:inputType="number"
            android:textColor="@color/color_333333"
            android:textColorHighlight="@color/color_c9c9c9"
            android:textSize="@dimen/sp14"
            tools:ignore="TextFields">

            <requestFocus />
        </EditText>


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ds40"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/login_password_image"
                android:layout_width="@dimen/ds15"
                android:layout_height="@dimen/ds15"
                android:layout_marginStart="@dimen/sp16"
                android:gravity="center"
                android:src="@mipmap/login_password_icon" />

            <EditText
                android:id="@+id/login_pass_word_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ds12"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/color_333333"
                android:textColorHighlight="@color/color_c9c9c9"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/login_register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/ds15"
                android:text="@string/not_account"
                android:textColor="@color/color_text1"
                android:textSize="@dimen/sp12" />

            <TextView
                android:id="@+id/login_forget_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="@dimen/ds15"
                android:text="@string/forget_password"
                android:textColor="@color/color_text1"
                android:textSize="@dimen/sp12"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds41"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:background="@mipmap/login_button_icon"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>