<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerCancel"
            android:layout_width="@dimen/ds50"
            android:layout_height="@dimen/ds50"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/ds15"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp14"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds45"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_radiu_8_bg"
        android:hint="@string/set_password"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:paddingStart="@dimen/ds15"
        android:textColor="@color/color_333333"
        android:textColorHighlight="@color/color_999999"
        android:textSize="@dimen/sp14"
        android:singleLine="true"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlSymmetry" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds42"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/login_button_icon"
        android:gravity="center"
        android:text="@string/register_right_now"
        android:textColor="@color/white"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordInput" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_password"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp12"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="确认密码"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp12"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput" />

    <LinearLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
        <!--邮箱注册-->
        <LinearLayout
            android:id="@+id/email_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户名"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp12" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/registerEmailPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ds45"
                android:layout_marginTop="@dimen/ds10"
                android:background="@drawable/gray_radiu_8_bg"
                android:hint="请输入您的手机号码或者邮箱地址"
                android:paddingStart="@dimen/ds15"
                android:textColor="@color/color_333333"
                android:textColorHighlight="@color/color_999999"
                android:textSize="@dimen/sp14"
                android:singleLine="true"
                android:maxLength="20"
                tools:ignore="RtlSymmetry" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp20"
                android:text="@string/verification"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp12"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ds10"
                android:background="@drawable/gray_radiu_8_bg">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/registerEmailCodeInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/ds45"
                    android:background="@null"
                    android:hint="@string/six_number"
                    android:inputType="number"
                    android:paddingStart="@dimen/ds15"
                    android:textColor="@color/color_333333"
                    android:textColorHighlight="@color/color_999999"
                    android:textSize="@dimen/sp14"
                    android:singleLine="true"
                    android:maxLength="20"

                    tools:ignore="RtlSymmetry,TextFields" />

                <com.yks.chestnutyun.customView.TimerButton
                    android:id="@+id/loginEmailGetCodeButton"
                    android:layout_width="@dimen/ds90"
                    android:layout_height="@dimen/ds30"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/ds8"
                    android:background="@mipmap/getcode_button_icon"
                    android:gravity="center"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp13"
                    app:tb_psText="重新获取"
                    app:tb_totalTime="60000"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerConfirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/ds45"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_radiu_8_bg"
        android:hint="确认登录密码"
        android:inputType="textVisiblePassword"
        android:paddingStart="@dimen/ds15"
        android:textColor="@color/color_333333"
        android:textColorHighlight="@color/color_999999"
        android:textSize="@dimen/sp14"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="@+id/registerPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>

